# trajectory_behaviours

activity_checking/: CMakeLists.txt  package.xml  setup.py
activity_checking/config/: default.yaml  region_names.yaml
activity_checking/launch/: activity_checking.launch
activity_checking/scripts/: activity_check_manager.py
activity_checking/src/activity_checking/: people_counter.py  util.py
human_trajectory_classifier/: CMakeLists.txt  README.md  setup.py
human_trajectory_classifier/action/: HMC.action
human_trajectory_classifier/msg/: HumanIdentifier.msg
human_trajectory_classifier/scripts/: client_test.py  identifier.py
human_trajectory_classifier/src/human_trajectory_classifier/: classifier.py  svm_classifier.py
region_observation/: CMakeLists.txt  package.xml  setup.py
region_observation/msg/: RegionObservationTime.msg
region_observation/src/region_observation/: observation_proxy.py  observe.py  util.py
relational_learner/: CMakeLists.txt  README.md  config.ini  package.xml  setup.py
relational_learner/docs/: README.md  trajectory_messages.md5
relational_learner/msg/: HourlyKnowledgeMsg.msg  RegionKnowledgeMsg.msg  activityGraphMsg.msg  episodeMsg.msg  episodesMsg.msg  novelTrajectory.msg
relational_learner/scripts/: OfflineLearning_action.py  episodes_client.py  episodes_client_OT.py  episodes_server.py  learn_traj_behaviours.py  novelty_client.py  novelty_client_OT.py  novelty_server.py
relational_learner/src/relational_learner/: Activity_Graph.py  config_utils.py  graph_hash.py  graphs_handler.py  interval_utils.py  landmark_utils.py  learn_tools.py  learningArea.py  obtain_trajectories.py  trajectory.py
relational_learner/srv/: EpisodeService.srv  NoveltyDetection.srv
time_analysis/: CMakeLists.txt  package.xml  setup.py
time_analysis/src/time_analysis/: cyclic_processes.py  directional_statistics.py  mvm_func.R  time_analysis.py
